...
        }
        observeProfileImageChanges()
        updateAvatar()
    }
    
    func showLogoutAlert(in viewController: ProfileViewController) {
        let alertController = UIAlertController(title: "Выход", message: "Вы уверены, что хотите выйти?", preferredStyle: .alert)
        let cancelAction = UIAlertAction(title: "Отмена", style: .cancel, handler: nil)
        alertController.addAction(cancelAction)
        
        let logoutAction = UIAlertAction(title: "Выход", style: .destructive) { [weak self] _ in
            ProfileLogoutService.shared.logout()
            self?.resetUI()
...
